--- a/index.html
+++ b/index.html
@@ -255,14 +255,14 @@
       <div class="hero-grid">
         <div>
           <h1>Ramakrishna (RK) Polagani</h1>
-          <h2>Business Systems Analyst · ERP / Enterprise Applications</h2>
+          <h2>Business Systems Analyst • PLM Architect • Traveller • Sports Enthusiast / Enterprise Applications</h2>
           <p>
             I help organisations translate business needs into practical system solutions — improving
             processes, data quality, and user experience across enterprise applications.
           </p>
           <div class="tag-list">
             <span class="tag">Requirements &amp; Process Analysis</span>
-            <span class="tag">ERP / PPM / PLM</span>
+            <span class="tag"> PLM / ERP / PPM / ALM / MES </span>
             <span class="tag">Stakeholder Collaboration</span>
             <span class="tag">Implementation &amp; Support</span>
           </div>
