--- a/index.html
+++ b/index.html
@@ -248,6 +248,7 @@
         <a href="#skills">Skills</a>
         <a href="#projects">Projects</a>
         <a href="#contact">Contact</a>
+        <a href="travel.html">Travelling</a>
       </nav>
     </div>
 
