--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
         <a href="#projects">Projects</a>
         <a href="#contact">Contact</a>
         <a href="travel.html">Travelling</a>
-        <a href="travel.html">Sports</a>
+        <a href="sports.html">Sports</a>
       </nav>
     </div>
 
