--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+<!-- Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DTLX677P9G"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-DTLX677P9G');
+</script>
 <head>
   <meta charset="UTF-8" />
   <title><title>Ramakrishna Polagani | Business Systems Analyst • PLM Architect • Traveller • Sports Enthusiast</title>
