--- a/sports.html
+++ b/sports.html
@@ -89,33 +89,63 @@
 <main class="container">
   <h1>Sports & Fitness</h1>
   <p>
-    This space is dedicated to the sports I follow, the ones I play, and the experiences
-    that shaped my interest in fitness, teamwork, discipline, and competition.
+    Sports have always been a big part of my life — not just as entertainment, but as a source of 
+    energy, discipline, and motivation. Whether it's the strategy behind a close cricket chase, the 
+    atmosphere of a baseball game, or the precision of Formula 1 racing, I enjoy the blend of 
+    competition, teamwork, and passion that sports bring.
   </p>
 
   <div class="section-caption">Interests</div>
   <h2>Sports I follow or play</h2>
+
   <div class="sports-list">
+
+    <!-- Cricket -->
     <div class="card">
-      <h3>Example Sport</h3>
-      <p>Short description about what you like about it.</p>
+      <h3>Cricket – Sunrisers Hyderabad (SRH)</h3>
+      <p>
+        I'm a dedicated supporter of SRH. I enjoy the strategic side of T20 cricket — from powerplay momentum 
+        to death-over execution. Watching SRH's bowling strength and comeback performances makes every match exciting.
+      </p>
     </div>
+
+    <!-- Baseball -->
     <div class="card">
-      <h3>Another Sport</h3>
-      <p>Why it matters to you — teamwork, fitness, strategy, etc.</p>
+      <h3>Baseball – Toronto Blue Jays</h3>
+      <p>
+        The Blue Jays introduced me to baseball's unique rhythm and tactical depth. I enjoy following their 
+        games, especially the teamwork, pitching battles, and the atmosphere around home runs at Rogers Centre.
+      </p>
     </div>
+
+    <!-- Formula 1 -->
+    <div class="card">
+      <h3>Formula 1 – Max Verstappen</h3>
+      <p>
+        I'm a strong admirer of Max Verstappen's racing style — aggressive, calculated, and consistently 
+        competitive. F1 combines engineering excellence and driver skill, and following Max’s races keeps the 
+        sport thrilling every season.
+      </p>
+    </div>
+
   </div>
 
   <div class="section-caption">Gallery</div>
   <h2>Sports photos</h2>
   <div class="gallery">
     <div class="gallery-item">
-      <img src="images/sport1.jpg" alt="Sports photo" />
-      <div class="caption">Caption about this sports moment.</div>
+      <img src="images/cricket.jpg" alt="Cricket photo" />
+      <div class="caption">Enjoying cricket moments — SRH matches and IPL highlights.</div>
     </div>
+
     <div class="gallery-item">
-      <img src="images/sport2.jpg" alt="Sports photo" />
-      <div class="caption">Second sports caption.</div>
+      <img src="images/baseball.jpg" alt="Baseball photo" />
+      <div class="caption">Toronto Blue Jays — big moments and stadium atmosphere.</div>
+    </div>
+
+    <div class="gallery-item">
+      <img src="images/f1.jpg" alt="Formula 1 photo" />
+      <div class="caption">F1 action — Max Verstappen on track.</div>
     </div>
   </div>
 
