--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
       <div class="hero-grid">
         <div>
           <h1>Ramakrishna (RK) Polagani</h1>
-          <h2>Business Systems Analyst • PLM Architect • Traveller • Sports Enthusiast / Enterprise Applications</h2>
+          <h2>Business Systems Analyst • PLM Architect • Traveller • Sports Enthusiast </h2>
           <p>
             I help organisations translate business needs into practical system solutions — improving
             processes, data quality, and user experience across enterprise applications.
