--- a/travel.html
+++ b/travel.html
@@ -5,7 +5,7 @@
   <title>RK Polagani | Travelling Experiences</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Travelling experiences of Ramakrishna (RK) Polagani." />
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
