--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
     <div class="hero">
       <div class="hero-grid">
         <div>
-          <h1>Ramakrishna (RK) Polagani</h1>
+          <h1>Ramakrishna Polagani (RK)</h1>
           <h2>Business Systems Analyst • PLM Architect • Traveller • Sports Enthusiast </h2>
           <p>
-            I help organisations translate business needs into practical system solutions — improving
-            processes, data quality, and user experience across enterprise applications.
+            I help engineering, manufacturing, and IT teams build a unified digital thread across the enterprise from product
+    design to production and quality so decisions are faster, data is cleaner, and change is controlled.
           </p>
           <div class="tag-list">
             <span class="tag">Requirements &amp; Process Analysis</span>
@@ -51,10 +51,11 @@
           <div class="hero-card">
             <h3>What I typically do</h3>
             <ul>
-              <li>Work with business users to understand processes and pain points</li>
-              <li>Translate requirements into clear, testable system changes</li>
-              <li>Coordinate with technical teams on design, build, and rollout</li>
-              <li>Support adoption through training, documentation, and follow-up</li>
+              <li><strong>PLM Implementations:</strong> Lead and support end-to-end PLM rollouts, from requirements and design to configuration, testing, and go-live.</li>
+              <li><strong>PLM–ERP–MES Integrations:</strong> Architect and design integrations that sync product, BOM, change, and manufacturing data across PLM, ERP, MES, and QMS.</li>
+              <li><strong>Change & Configuration Management:</strong> Streamline engineering change processes, approvals, and traceability across systems and functions.</li>
+              <li><strong>Solution Design & Governance:</strong> Translate business requirements into scalable, maintainable technical designs that align with enterprise standards.</li>
+              <li><strong>Stakeholder Collaboration:</strong> Work closely with engineering, manufacturing, quality, and IT to align tools, processes, and data models.</li>
             </ul>
           </div>
         </div>
