--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-DTLX677P9G"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'G-DTLX677P9G');
-</script>
 <head>
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-DTLX677P9G"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-DTLX677P9G');
+  </script>
+
   <meta charset="UTF-8" />
-<title>Ramakrishna Polagani | Business Systems Analyst • PLM Architect • Traveller • Sports Enthusiast</title>
+  <title>Ramakrishna Polagani | Business Systems Analyst • PLM Architect • Traveller • Sports Enthusiast</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Ramakrishna Polagani - Business Systems Analyst portfolio, experience, skills, and projects." />
+  <meta name="description" content="Ramakrishna Polagani - PLM Business Systems Analyst & Integration Architect portfolio, experience, skills, and projects." />
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -35,14 +36,14 @@
       <div class="hero-grid">
         <div>
           <h1>Ramakrishna Polagani (RK)</h1>
-          <h2>Business Systems Analyst • PLM Architect • Traveller • Sports Enthusiast </h2>
+          <h2>Business Systems Analyst • PLM Architect • Traveller • Sports Enthusiast</h2>
           <p>
-            I help engineering, manufacturing, and IT teams build a unified digital thread across the enterprise from product
-    design to production and quality so decisions are faster, data is cleaner, and change is controlled.
+            I help engineering, manufacturing, and IT teams build a unified digital thread across the enterprise —
+            from product design to production and quality — so decisions are faster, data is cleaner, and change is controlled.
           </p>
           <div class="tag-list">
             <span class="tag">Requirements &amp; Process Analysis</span>
-            <span class="tag"> PLM / ERP / PPM / ALM / MES </span>
+            <span class="tag">PLM / ERP / PPM / ALM / MES</span>
             <span class="tag">Stakeholder Collaboration</span>
             <span class="tag">Implementation &amp; Support</span>
           </div>
@@ -53,8 +54,8 @@
             <ul>
               <li><strong>PLM Implementations:</strong> Lead and support end-to-end PLM rollouts, from requirements and design to configuration, testing, and go-live.</li>
               <li><strong>PLM–ERP–MES Integrations:</strong> Architect and design integrations that sync product, BOM, change, and manufacturing data across PLM, ERP, MES, and QMS.</li>
-              <li><strong>Change & Configuration Management:</strong> Streamline engineering change processes, approvals, and traceability across systems and functions.</li>
-              <li><strong>Solution Design & Governance:</strong> Translate business requirements into scalable, maintainable technical designs that align with enterprise standards.</li>
+              <li><strong>Change &amp; Configuration Management:</strong> Streamline engineering change processes, approvals, and traceability across systems and functions.</li>
+              <li><strong>Solution Design &amp; Governance:</strong> Translate business requirements into scalable, maintainable technical designs that align with enterprise standards.</li>
               <li><strong>Stakeholder Collaboration:</strong> Work closely with engineering, manufacturing, quality, and IT to align tools, processes, and data models.</li>
             </ul>
           </div>
@@ -67,37 +68,40 @@
 <main>
   <div class="container">
 
+    <!-- ABOUT -->
     <section id="about">
       <div class="card">
         <h2>About</h2>
         <p class="card-subtitle">Short background and focus areas.</p>
+
         <p>
-  I’m a PLM Business Systems Analyst and Integration Architect with 14+ years of experience helping organizations
-  modernize how they design, build, and manage products. I’ve worked across Healthcare, MedTech, Hi-Tech,
-  Semiconductor, Industrial Equipment, Consumer Goods, and Aerospace, giving me a broad perspective on how
-  different industries approach product development and digital transformation.
-</p>
+          I’m a PLM Business Systems Analyst and Integration Architect with 14+ years of experience helping organizations
+          modernize how they design, build, and manage products. I’ve worked across Healthcare, MedTech, Hi-Tech,
+          Semiconductor, Industrial Equipment, Consumer Goods, and Aerospace, giving me a broad perspective on how
+          different industries approach product development and digital transformation.
+        </p>
 
-<p>
-  My focus is on designing and delivering scalable PLM solutions and integrations across systems such as Oracle
-  Agile PLM, Siemens Teamcenter, PTC Windchill, Arena PLM, ERP, and MES environments. I specialize in creating
-  unified digital threads using tools like T4X/T4O, Oracle Fusion Middleware, MuleSoft, and Power Automate to
-  connect engineering, manufacturing, and quality processes.
-</p>
+        <p>
+          My focus is on designing and delivering scalable PLM solutions and integrations across systems such as Oracle
+          Agile PLM, Siemens Teamcenter, PTC Windchill, Arena PLM, ERP, and MES environments. I specialize in creating
+          unified digital threads using tools like T4X/T4O, Oracle Fusion Middleware, MuleSoft, and Power Automate to
+          connect engineering, manufacturing, and quality processes.
+        </p>
 
-<p>
-  Beyond work, sports from cricket to baseball and travel across Asia and North America have shaped how I
-  approach teamwork, adaptability, and problem solving. These experiences help me bring a balanced, global
-  perspective to every project.
-</p>
+        <p>
+          Beyond work, sports — from cricket to baseball — and travel across Asia and North America have shaped how I
+          approach teamwork, adaptability, and problem solving. These experiences help me bring a balanced, global
+          perspective to every project.
+        </p>
 
-<p>
-  I enjoy operating between business and IT clarifying requirements, simplifying complexity, and ensuring
-  solutions are realistic, testable, and maintainable.
-</p>
+        <p>
+          I enjoy operating between business and IT — clarifying requirements, simplifying complexity, and ensuring
+          solutions are realistic, testable, and maintainable.
+        </p>
       </div>
     </section>
 
+    <!-- EXPERIENCE -->
     <section id="experience">
       <div class="card">
         <h2>Experience Snapshot</h2>
@@ -106,30 +110,56 @@
           <div>
             <div class="item">
               <div class="item-title">Business Systems Analyst</div>
-              <div class="item-meta">Organisation / Location · YYYY–Present</div>
+              <div class="item-meta">StarFish Medical · Toronto, Canada · Sep 2023–Present</div>
               <ul>
-                <li>Partner with business stakeholders to map current and target processes.</li>
-                <li>Document functional requirements, user stories, and use cases.</li>
-                <li>Coordinate with technical teams on solution design and configuration.</li>
+                <li>Lead PLM and product data process improvements across engineering and manufacturing teams.</li>
+                <li>Analyze and document functional requirements, workflows, and change management processes.</li>
+                <li>Support Syspro, Mechworks PDM, and PLM enhancements to improve data accuracy and traceability.</li>
+                <li>Coordinate with technical teams on solution design, testing, deployment, and release validation.</li>
+              </ul>
+            </div>
+
+            <div class="item">
+              <div class="item-title">Consultant / Senior Associate Consultant</div>
+              <div class="item-meta">Infosys · Toronto, Canada · Jun 2016–Sep 2023</div>
+              <ul>
+                <li>Specialist in PLM domain with expert-level experience in Oracle Agile PLM (Product Collaboration and Portfolio Management).</li>
+                <li>Led requirements gathering, AS-IS/TO-BE process mapping, and gap analysis for PLM and ERP integrations.</li>
+                <li>Configured Agile PLM workflows, objects, change processes, roles, and access models.</li>
+                <li>Delivered development, customization, configuration, and installation across multiple Agile PLM projects.</li>
+                <li>Supported SIT/UAT, issue triage, production rollout, and post-go-live stabilization.</li>
+              </ul>
+            </div>
+
+            <div class="item">
+              <div class="item-title">Senior Software Engineer</div>
+              <div class="item-meta">Tech Mahindra · Hyderabad, India · Aug 2011–Jun 2016</div>
+              <ul>
+                <li>Implemented and supported Oracle Agile PLM modules with a focus on configuration and customization.</li>
+                <li>Developed Agile PLM extensions, integrations, and reports using SQL and related technologies.</li>
+                <li>Assisted with migrations, upgrades, data validation, and change management support for Agile PLM environments.</li>
               </ul>
             </div>
           </div>
+
           <div>
             <div class="item">
               <div class="item-title">Key responsibilities across roles</div>
               <ul>
                 <li>Requirements gathering workshops and stakeholder interviews.</li>
                 <li>Process documentation (AS-IS / TO-BE) and gap analysis.</li>
+                <li>Functional specifications, user stories, and integration requirements.</li>
                 <li>System testing (SIT/UAT), issue triage, and release validation.</li>
                 <li>End-user support, training, and knowledge base updates.</li>
+                <li>Collaboration with cross-functional teams across engineering, manufacturing, quality, and IT.</li>
               </ul>
             </div>
           </div>
         </div>
-        <!-- TODO: Replace example text with your actual organisations, dates, and key achievements. -->
       </div>
     </section>
 
+    <!-- SKILLS -->
     <section id="skills">
       <div class="card">
         <h2>Skills &amp; Tools</h2>
@@ -138,58 +168,73 @@
           <div>
             <h3 style="margin-top:0;font-size:14px;">Business &amp; Analysis</h3>
             <ul>
-              <li>Business process mapping &amp; optimisation</li>
-              <li>Requirements elicitation and documentation</li>
-              <li>User stories, use cases, and acceptance criteria</li>
-              <li>Workshop facilitation and stakeholder management</li>
+              <li>Business process mapping &amp; optimisation (PLM, ERP, MES, QMS).</li>
+              <li>Requirements elicitation and documentation (BRD, FRD, user stories).</li>
+              <li>AS-IS / TO-BE modelling and gap analysis.</li>
+              <li>Change management, stakeholder alignment, and governance.</li>
             </ul>
           </div>
           <div>
             <h3 style="margin-top:0;font-size:14px;">Systems &amp; Platforms</h3>
             <ul>
-              <li>ERP / PPM / PLM / LMS (add your specific products here)</li>
-              <li>Reporting &amp; analytics tools</li>
-              <li>Ticketing / ITSM platforms</li>
-              <li>Confluence / SharePoint / documentation tools</li>
+              <li>Oracle Agile PLM, Siemens Teamcenter / Teamcenter X.</li>
+              <li>PTC Windchill, Arena PLM.</li>
+              <li>Oracle ERP, SAP, MES &amp; QMS integrations.</li>
+              <li>T4X / T4O, Oracle Fusion Middleware, MuleSoft, Power Automate.</li>
             </ul>
           </div>
         </div>
         <ul class="pill-list" style="margin-top:14px;">
-          <li class="pill">Process Analysis</li>
-          <li class="pill">Functional Documentation</li>
-          <li class="pill">Testing &amp; Validation</li>
-          <li class="pill">Change Support</li>
-          <li class="pill">User Training</li>
+          <li class="pill">PLM–ERP–MES Integrations</li>
+          <li class="pill">Change &amp; Configuration Management</li>
+          <li class="pill">Solution Design &amp; Governance</li>
+          <li class="pill">Testing (SIT / UAT)</li>
+          <li class="pill">User Training &amp; Adoption</li>
         </ul>
       </div>
     </section>
 
+    <!-- PROJECTS -->
     <section id="projects">
       <div class="card">
         <h2>Selected Projects</h2>
-        <p class="card-subtitle">Illustrative examples – replace with your own initiatives.</p>
+        <p class="card-subtitle">Representative examples of PLM and integration work.</p>
+
         <div class="item">
-          <div class="item-title">ERP process improvement initiative</div>
-          <div class="item-meta">Role: Business Systems Analyst</div>
+          <div class="item-title">Oracle Agile PLM Implementation for Global MedTech</div>
+          <div class="item-meta">Role: PLM Business Systems Analyst</div>
           <ul>
-            <li>Mapped AS-IS order-to-cash process and identified bottlenecks and manual steps.</li>
-            <li>Worked with business and IT to define TO-BE process and prioritised enhancements.</li>
-            <li>Supported configuration, testing, and rollout, including user training materials.</li>
+            <li>Gathered requirements from R&amp;D, quality, and manufacturing teams for product and change management.</li>
+            <li>Defined AS-IS and TO-BE processes for engineering change, document control, and BOM management.</li>
+            <li>Supported configuration of Agile PLM objects, workflows, roles, and access models.</li>
+            <li>Coordinated SIT/UAT, issue triage, and user training for a phased go-live.</li>
           </ul>
         </div>
+
         <div class="item">
-          <div class="item-title">Reporting &amp; data quality uplift</div>
-          <div class="item-meta">Role: Analyst / Coordinator</div>
+          <div class="item-title">Teamcenter–SAP Integration for Hi-Tech Manufacturer</div>
+          <div class="item-meta">Role: Integration Architect / Analyst</div>
           <ul>
-            <li>Collected reporting requirements from finance and operations teams.</li>
-            <li>Defined data rules and validations to improve accuracy and consistency.</li>
-            <li>Helped design dashboards and KPIs for leadership visibility.</li>
+            <li>Worked with business and IT teams to define integration scope for materials, BOM, and change data.</li>
+            <li>Designed PLM–ERP integration flows using T4X/T4O to support downstream manufacturing and procurement.</li>
+            <li>Documented interface specifications, data mappings, and error-handling scenarios.</li>
+            <li>Supported end-to-end testing, cutover planning, and production stabilization.</li>
           </ul>
         </div>
-        <!-- TODO: Replace these with your real projects when ready. -->
+
+        <div class="item">
+          <div class="item-title">PLM Enhancements and Process Optimization</div>
+          <div class="item-meta">Role: PLM Consultant</div>
+          <ul>
+            <li>Analyzed change cycle times and user pain points across multiple business units.</li>
+            <li>Proposed and implemented workflow optimizations, notifications, and dashboard improvements.</li>
+            <li>Improved data quality and traceability for audit and regulatory reporting.</li>
+          </ul>
+        </div>
       </div>
     </section>
 
+    <!-- CONTACT -->
     <section id="contact">
       <div class="card">
         <h2>Contact</h2>
@@ -197,14 +242,17 @@
         <div class="contact-row">
           <span>Email:
             <a href="mailto:youremail@example.com">youremail@example.com</a>
+            <!-- Replace with your actual email address -->
           </span>
           <span>LinkedIn:
-            <a href="https://www.linkedin.com" target="_blank" rel="noopener">Add your LinkedIn URL</a>
+            <a href="https://www.linkedin.com/in/ramakrishna-polagani-67297ab8/" target="_blank" rel="noopener">
+              linkedin.com/in/ramakrishna-polagani-67297ab8
+            </a>
           </span>
         </div>
         <p style="margin-top:12px;font-size:13px;color:var(--text-muted);">
-          I’m open to conversations about business systems analysis, enterprise applications, and
-          process improvement opportunities.
+          I’m open to conversations about PLM, enterprise integrations, and opportunities to improve how teams design,
+          build, and manage products.
         </p>
       </div>
     </section>
