--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
         </p>
 
         <p>
-          Beyond work, sports — from cricket to baseball — and travel across Asia and North America have shaped how I
+          Beyond work, sports from cricket to baseball and travel across Asia and North America have shaped how I
           approach teamwork, adaptability, and problem solving. These experiences help me bring a balanced, global
           perspective to every project.
         </p>
 
         <p>
-          I enjoy operating between business and IT — clarifying requirements, simplifying complexity, and ensuring
+          I enjoy operating between business and IT clarifying requirements, simplifying complexity, and ensuring
           solutions are realistic, testable, and maintainable.
         </p>
       </div>
