--- a/travel.html
+++ b/travel.html
@@ -8,13 +8,20 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <!-- Same header/nav as index.html -->
   <header>
-    <div class="nav">
-      <div class="nav-left">Ramakrishna Polagani (RK)</div>
-      <div class="nav-links">
-        <a href="index.html">Home</a>
-        <a href="travel.html">Travelling</a>
-        <a href="sports.html">Sports</a>
+    <div class="container">
+      <div class="top-bar">
+        <div class="brand">RK POLAGANI</div>
+        <nav>
+          <a href="index.html#about">About</a>
+          <a href="index.html#experience">Experience</a>
+          <a href="index.html#skills">Skills</a>
+          <a href="index.html#projects">Projects</a>
+          <a href="index.html#contact">Contact</a>
+          <a href="travel.html">Travelling</a>
+          <a href="sports.html">Sports</a>
+        </nav>
       </div>
     </div>
   </header>
