--- a/sports.html
+++ b/sports.html
@@ -1,273 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-DTLX677P9G"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-DTLX677P9G');
-  </script>
-
   <meta charset="UTF-8" />
-  <title>Ramakrishna Polagani | Business Systems Analyst • PLM Architect • Traveller • Sports Enthusiast</title>
+  <title>RK Polagani | Sports Enthusiast</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Ramakrishna Polagani - PLM Business Systems Analyst & Integration Architect portfolio, experience, skills, and projects." />
+  <meta name="description" content="Sports experiences and interests of Ramakrishna (RK) Polagani." />
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+<!-- Same header/nav as index.html -->
 <header>
   <div class="container">
     <div class="top-bar">
       <div class="brand">RK POLAGANI</div>
       <nav>
-        <a href="#about">About</a>
-        <a href="#experience">Experience</a>
-        <a href="#skills">Skills</a>
-        <a href="#projects">Projects</a>
-        <a href="#contact">Contact</a>
+        <a href="index.html#about">About</a>
+        <a href="index.html#experience">Experience</a>
+        <a href="index.html#skills">Skills</a>
+        <a href="index.html#projects">Projects</a>
+        <a href="index.html#contact">Contact</a>
         <a href="travel.html">Travelling</a>
         <a href="sports.html">Sports</a>
       </nav>
     </div>
-
-    <div class="hero">
-      <div class="hero-grid">
-        <div>
-          <h1>Ramakrishna Polagani (RK)</h1>
-          <h2>Business Systems Analyst • PLM Architect • Traveller • Sports Enthusiast</h2>
-          <p>
-            I help engineering, manufacturing, and IT teams build a unified digital thread across the enterprise —
-            from product design to production and quality — so decisions are faster, data is cleaner, and change is controlled.
-          </p>
-          <div class="tag-list">
-            <span class="tag">Requirements &amp; Process Analysis</span>
-            <span class="tag">PLM / ERP / PPM / ALM / MES</span>
-            <span class="tag">Stakeholder Collaboration</span>
-            <span class="tag">Implementation &amp; Support</span>
-          </div>
-        </div>
-        <div>
-          <div class="hero-card">
-            <h3>What I typically do</h3>
-            <ul>
-              <li><strong>PLM Implementations:</strong> Lead and support end-to-end PLM rollouts, from requirements and design to configuration, testing, and go-live.</li>
-              <li><strong>PLM–ERP–MES Integrations:</strong> Architect and design integrations that sync product, BOM, change, and manufacturing data across PLM, ERP, MES, and QMS.</li>
-              <li><strong>Change &amp; Configuration Management:</strong> Streamline engineering change processes, approvals, and traceability across systems and functions.</li>
-              <li><strong>Solution Design &amp; Governance:</strong> Translate business requirements into scalable, maintainable technical designs that align with enterprise standards.</li>
-              <li><strong>Stakeholder Collaboration:</strong> Work closely with engineering, manufacturing, quality, and IT to align tools, processes, and data models.</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
   </div>
 </header>
 
-<main>
-  <div class="container">
+<main class="container">
+  <h1>Sports & Fitness</h1>
+  <p>
+    Sports have always been a big part of my life not just as entertainment, but as a source of 
+    energy, discipline, and motivation. Whether it's the strategy behind a close cricket chase, the 
+    atmosphere of a baseball game, or the precision of Formula 1 racing, I enjoy the blend of 
+    competition, teamwork, and passion that sports bring.
+  </p>
 
-    <!-- ABOUT -->
-    <section id="about">
-      <div class="card">
-        <h2>About</h2>
-        <p class="card-subtitle">Short background and focus areas.</p>
+  <div class="section-caption">Interests</div>
+  <h2>Sports I follow or play</h2>
 
-        <p>
-          I’m a PLM Business Systems Analyst and Integration Architect with 14+ years of experience helping organizations
-          modernize how they design, build, and manage products. I’ve worked across Healthcare, MedTech, Hi-Tech,
-          Semiconductor, Industrial Equipment, Consumer Goods, and Aerospace, giving me a broad perspective on how
-          different industries approach product development and digital transformation.
-        </p>
+  <div class="sports-list">
 
-        <p>
-          My focus is on designing and delivering scalable PLM solutions and integrations across systems such as Oracle
-          Agile PLM, Siemens Teamcenter, PTC Windchill, Arena PLM, ERP, and MES environments. I specialize in creating
-          unified digital threads using tools like T4X/T4O, Oracle Fusion Middleware, MuleSoft, and Power Automate to
-          connect engineering, manufacturing, and quality processes.
-        </p>
+    <!-- Cricket -->
+    <div class="card">
+      <h3>Cricket – Sunrisers Hyderabad (SRH)</h3>
+      <p>
+        I'm a dedicated supporter of SRH. I enjoy the strategic side of T20 cricket — from powerplay momentum 
+        to death-over execution. Watching SRH's bowling strength and comeback performances makes every match exciting.
+      </p>
+    </div>
 
-        <p>
-          Beyond work, sports — from cricket to baseball — and travel across Asia and North America have shaped how I
-          approach teamwork, adaptability, and problem solving. These experiences help me bring a balanced, global
-          perspective to every project.
-        </p>
+    <!-- Baseball -->
+    <div class="card">
+      <h3>Baseball – Toronto Blue Jays</h3>
+      <p>
+        The Blue Jays introduced me to baseball's unique rhythm and tactical depth. I enjoy following their 
+        games, especially the teamwork, pitching battles, and the atmosphere around home runs at Rogers Centre.
+      </p>
+    </div>
 
-        <p>
-          I enjoy operating between business and IT — clarifying requirements, simplifying complexity, and ensuring
-          solutions are realistic, testable, and maintainable.
-        </p>
-      </div>
-    </section>
+    <!-- Formula 1 -->
+    <div class="card">
+      <h3>Formula 1 – Max Verstappen</h3>
+      <p>
+        I'm a strong admirer of Max Verstappen's racing style — aggressive, calculated, and consistently 
+        competitive. F1 combines engineering excellence and driver skill, and following Max’s races keeps the 
+        sport thrilling every season.
+      </p>
+    </div>
 
-    <!-- EXPERIENCE -->
-    <section id="experience">
-      <div class="card">
-        <h2>Experience Snapshot</h2>
-        <p class="card-subtitle">High-level view of roles and responsibilities.</p>
-        <div class="two-col">
-          <div>
-            <div class="item">
-              <div class="item-title">Business Systems Analyst</div>
-              <div class="item-meta">StarFish Medical · Toronto, Canada · Sep 2023–Present</div>
-              <ul>
-                <li>Lead PLM and product data process improvements across engineering and manufacturing teams.</li>
-                <li>Analyze and document functional requirements, workflows, and change management processes.</li>
-                <li>Support Syspro, Mechworks PDM, and PLM enhancements to improve data accuracy and traceability.</li>
-                <li>Coordinate with technical teams on solution design, testing, deployment, and release validation.</li>
-              </ul>
-            </div>
+  </div>
 
-            <div class="item">
-              <div class="item-title">Consultant / Senior Associate Consultant</div>
-              <div class="item-meta">Infosys · Toronto, Canada · Jun 2016–Sep 2023</div>
-              <ul>
-                <li>Specialist in PLM domain with expert-level experience in Oracle Agile PLM (Product Collaboration and Portfolio Management).</li>
-                <li>Led requirements gathering, AS-IS/TO-BE process mapping, and gap analysis for PLM and ERP integrations.</li>
-                <li>Configured Agile PLM workflows, objects, change processes, roles, and access models.</li>
-                <li>Delivered development, customization, configuration, and installation across multiple Agile PLM projects.</li>
-                <li>Supported SIT/UAT, issue triage, production rollout, and post-go-live stabilization.</li>
-              </ul>
-            </div>
+  <div class="section-caption">Gallery</div>
+  <h2>Sports photos</h2>
+  <div class="gallery">
+    <div class="gallery-item">
+      <img src="images/cricket.jpg" alt="Cricket photo" />
+      <div class="caption">Enjoying cricket moments — SRH matches and IPL highlights.</div>
+    </div>
 
-            <div class="item">
-              <div class="item-title">Senior Software Engineer</div>
-              <div class="item-meta">Tech Mahindra · Hyderabad, India · Aug 2011–Jun 2016</div>
-              <ul>
-                <li>Implemented and supported Oracle Agile PLM modules with a focus on configuration and customization.</li>
-                <li>Developed Agile PLM extensions, integrations, and reports using SQL and related technologies.</li>
-                <li>Assisted with migrations, upgrades, data validation, and change management support for Agile PLM environments.</li>
-              </ul>
-            </div>
-          </div>
+    <div class="gallery-item">
+      <img src="images/baseball.jpg" alt="Baseball photo" />
+      <div class="caption">Toronto Blue Jays — big moments and stadium atmosphere.</div>
+    </div>
 
-          <div>
-            <div class="item">
-              <div class="item-title">Key responsibilities across roles</div>
-              <ul>
-                <li>Requirements gathering workshops and stakeholder interviews.</li>
-                <li>Process documentation (AS-IS / TO-BE) and gap analysis.</li>
-                <li>Functional specifications, user stories, and integration requirements.</li>
-                <li>System testing (SIT/UAT), issue triage, and release validation.</li>
-                <li>End-user support, training, and knowledge base updates.</li>
-                <li>Collaboration with cross-functional teams across engineering, manufacturing, quality, and IT.</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+    <div class="gallery-item">
+      <img src="images/f1.jpg" alt="Formula 1 photo" />
+      <div class="caption">F1 action — Max Verstappen on track.</div>
+    </div>
+  </div>
 
-    <!-- SKILLS -->
-    <section id="skills">
-      <div class="card">
-        <h2>Skills &amp; Tools</h2>
-        <p class="card-subtitle">Mix of domains, methods, and platforms.</p>
-        <div class="two-col">
-          <div>
-            <h3 style="margin-top:0;font-size:14px;">Business &amp; Analysis</h3>
-            <ul>
-              <li>Business process mapping &amp; optimisation (PLM, ERP, MES, QMS).</li>
-              <li>Requirements elicitation and documentation (BRD, FRD, user stories).</li>
-              <li>AS-IS / TO-BE modelling and gap analysis.</li>
-              <li>Change management, stakeholder alignment, and governance.</li>
-            </ul>
-          </div>
-          <div>
-            <h3 style="margin-top:0;font-size:14px;">Systems &amp; Platforms</h3>
-            <ul>
-              <li>Oracle Agile PLM, Siemens Teamcenter / Teamcenter X.</li>
-              <li>PTC Windchill, Arena PLM.</li>
-              <li>Oracle ERP, SAP, MES &amp; QMS integrations.</li>
-              <li>T4X / T4O, Oracle Fusion Middleware, MuleSoft, Power Automate.</li>
-            </ul>
-          </div>
-        </div>
-        <ul class="pill-list" style="margin-top:14px;">
-          <li class="pill">PLM–ERP–MES Integrations</li>
-          <li class="pill">Change &amp; Configuration Management</li>
-          <li class="pill">Solution Design &amp; Governance</li>
-          <li class="pill">Testing (SIT / UAT)</li>
-          <li class="pill">User Training &amp; Adoption</li>
-        </ul>
-      </div>
-    </section>
-
-    <!-- PROJECTS -->
-    <section id="projects">
-      <div class="card">
-        <h2>Selected Projects</h2>
-        <p class="card-subtitle">Representative examples of PLM and integration work.</p>
-
-        <div class="item">
-          <div class="item-title">Oracle Agile PLM Implementation for Global MedTech</div>
-          <div class="item-meta">Role: PLM Business Systems Analyst</div>
-          <ul>
-            <li>Gathered requirements from R&amp;D, quality, and manufacturing teams for product and change management.</li>
-            <li>Defined AS-IS and TO-BE processes for engineering change, document control, and BOM management.</li>
-            <li>Supported configuration of Agile PLM objects, workflows, roles, and access models.</li>
-            <li>Coordinated SIT/UAT, issue triage, and user training for a phased go-live.</li>
-          </ul>
-        </div>
-
-        <div class="item">
-          <div class="item-title">Teamcenter–SAP Integration for Hi-Tech Manufacturer</div>
-          <div class="item-meta">Role: Integration Architect / Analyst</div>
-          <ul>
-            <li>Worked with business and IT teams to define integration scope for materials, BOM, and change data.</li>
-            <li>Designed PLM–ERP integration flows using T4X/T4O to support downstream manufacturing and procurement.</li>
-            <li>Documented interface specifications, data mappings, and error-handling scenarios.</li>
-            <li>Supported end-to-end testing, cutover planning, and production stabilization.</li>
-          </ul>
-        </div>
-
-        <div class="item">
-          <div class="item-title">PLM Enhancements and Process Optimization</div>
-          <div class="item-meta">Role: PLM Consultant</div>
-          <ul>
-            <li>Analyzed change cycle times and user pain points across multiple business units.</li>
-            <li>Proposed and implemented workflow optimizations, notifications, and dashboard improvements.</li>
-            <li>Improved data quality and traceability for audit and regulatory reporting.</li>
-          </ul>
-        </div>
-      </div>
-    </section>
-
-    <!-- CONTACT -->
-    <section id="contact">
-      <div class="card">
-        <h2>Contact</h2>
-        <p class="card-subtitle">Best ways to reach me.</p>
-        <div class="contact-row">
-          <span>Email:
-            <a href="mailto:youremail@example.com">youremail@example.com</a>
-            <!-- Replace with your actual email address -->
-          </span>
-          <span>LinkedIn:
-            <a href="https://www.linkedin.com/in/ramakrishna-polagani-67297ab8/" target="_blank" rel="noopener">
-              linkedin.com/in/ramakrishna-polagani-67297ab8
-            </a>
-          </span>
-        </div>
-        <p style="margin-top:12px;font-size:13px;color:var(--text-muted);">
-          I’m open to conversations about PLM, enterprise integrations, and opportunities to improve how teams design,
-          build, and manage products.
-        </p>
-      </div>
-    </section>
-
+  <div class="back-link">
+    ← <a href="index.html">Back to main profile</a>
   </div>
 </main>
 
 <footer>
-  <div class="container">
-    © <span id="year"></span> Ramakrishna (RK) Polagani · Hosted on GitHub Pages
-  </div>
+  © <span id="year"></span> Ramakrishna (RK) Polagani
 </footer>
 
 <script>
-  document.getElementById('year').textContent = new Date().getFullYear();
+  document.getElementById("year").textContent = new Date().getFullYear();
 </script>
 </body>
 </html>
