--- a/travel.html
+++ b/travel.html
@@ -12,8 +12,9 @@
   <header>
     <div class="container">
       <div class="top-bar">
-        <div class="brand">RK POLAGANI</div>
+        <a href="index.html" class="brand">RK POLAGANI</a>
         <nav>
+          <a href="index.html#about">Home</a>
           <a href="index.html#about">About</a>
           <a href="index.html#experience">Experience</a>
           <a href="index.html#skills">Skills</a>
