--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="top-bar">
       <a href="index.html" class="brand">RK POLAGANI</a>
       <nav>
-        <a href="index.html">Home</a>
+        <a href="index.html" class="active">Home</a>
         <a href="#about">About</a>
         <a href="#experience">Experience</a>
         <a href="#skills">Skills</a>
