--- a/index.html
+++ b/index.html
@@ -14,6 +14,39 @@
   <title>Ramakrishna Polagani | Business Systems Analyst • PLM Architect • Traveller • Sports Enthusiast</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Ramakrishna Polagani - PLM Business Systems Analyst & Integration Architect portfolio, experience, skills, and projects." />
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://rkpolagani.com/" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Ramakrishna Polagani | PLM Business Systems Analyst & Integration Architect" />
+  <meta property="og:description" content="PLM Business Systems Analyst & Integration Architect specializing in Oracle Agile PLM, Siemens Teamcenter, PTC Windchill, Arena PLM, and PLM–ERP–MES integrations." />
+  <meta property="og:url" content="https://rkpolagani.com/" />
+  <!-- Optional: update with a real image when you have one -->
+  <!-- <meta property="og:image" content="https://rkpolagani.com/images/preview.jpg" /> -->
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="Ramakrishna Polagani | PLM Business Systems Analyst & Integration Architect" />
+  <meta name="twitter:description" content="Helping organizations modernize how they design, build, and manage products through PLM, ERP, and MES integrations." />
+
+  <!-- Structured data (Person) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Ramakrishna Polagani",
+    "alternateName": "RK Polagani",
+    "url": "https://rkpolagani.com/",
+    "jobTitle": "PLM Business Systems Analyst & Integration Architect",
+    "description": "PLM Business Systems Analyst and Integration Architect specializing in Oracle Agile PLM, Siemens Teamcenter, PTC Windchill, Arena PLM and PLM–ERP–MES integrations.",
+    "sameAs": [
+      "https://www.linkedin.com/in/ramakrishna-polagani-67297ab8/"
+    ]
+  }
+  </script>
+
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -242,7 +275,7 @@
         <p class="card-subtitle">Best ways to reach me.</p>
         <div class="contact-row">
           <span>Email:
-            <a href="mailto:youremail@example.com">youremail@example.com</a>
+            <a href="mailto:">@gmail.com</a>
             <!-- Replace with your actual email address -->
           </span>
           <span>LinkedIn:
@@ -254,6 +287,14 @@
         <p style="margin-top:12px;font-size:13px;color:var(--text-muted);">
           I’m open to conversations about PLM, enterprise integrations, and opportunities to improve how teams design,
           build, and manage products.
+        </p>
+
+        <!-- Resume Download Button -->
+        <!-- Update the href to the correct path/name of your PDF resume -->
+        <p style="margin-top:16px;">
+          <a href="assets/Ramakrishna-Polagani-Resume.pdf" class="pill" target="_blank" rel="noopener">
+            Download Résumé (PDF)
+          </a>
         </p>
       </div>
     </section>
