--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
           <h1>Ramakrishna Polagani (RK)</h1>
           <h2>Business Systems Analyst • PLM Architect • Traveller • Sports Enthusiast</h2>
           <p>
-            I help engineering, manufacturing, and IT teams build a unified digital thread across the enterprise —
-            from product design to production and quality — so decisions are faster, data is cleaner, and change is controlled.
+            I help engineering, manufacturing, and IT teams build a unified digital thread across the enterprise 
+            from product design to production and quality so decisions are faster, data is cleaner, and change is controlled.
           </p>
           <div class="tag-list">
             <span class="tag">Requirements &amp; Process Analysis</span>
